# formurmel

./: README.md  pyproject.toml
datasets/basic_problems/lean_dataset_json/eval/: problem_2.json  problem_3.json  problem_34.json  problem_40.json  problem_43.json
datasets/basic_problems/lean_dataset_json/eval_plus/: problem_12.json  problem_35.json  problem_4.json
datasets/basic_problems/lean_dataset_json/train/: problem_15.json  problem_16.json  problem_17.json  problem_19.json  problem_21.json  (+28 more)
datasets/sair_normal_true/lean_dataset_json/: conversion_metadata.json
prompts/: system_prompt.md
runs/basic_train_eval_qwen35/: generation_summary.json  rollout_summary.jsonl
runs/basic_validation_qwen35/: generation_summary.json
runs/basic_validation_qwen35/diagnoses/: problem_54.diagnosis.json
scripts/: build_problem_configs.py  run_problem_rollouts.py
src/formurmel/: __init__.py  __main__.py  agent.py  cli.py  config.py  diagnosis.py  episode.py  logging.py  message.py  runtime.py
src/formurmel/kb/: __init__.py  graph.py  model.py
src/formurmel/llm/: __init__.py  base.py  hosted_chat.py  qwen35_llama_cpp.py  shared.py
src/formurmel/tools/: __init__.py  base.py  kb_tool.py  lean_tool.py  murmel_tool.py  read_only_kb_tool.py  registry.py  transcript_inspect_tool.py
tests/: test_build_problem_configs.py  test_config_runtime.py  test_diagnosis_mode.py  test_diagnosis_prompt.py  test_diagnosis_schema.py  test_episode_runner.py  test_kb_tool.py  test_murmel_tool.py  test_read_only_kb_tool.py  test_system_prompt.py  test_transcript_inspect_tool.py
(+769 files in other folders)
