[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "formurmel"
version = "0.1.0"
description = "A Lean formalization agent using murmel for mathlib search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[project.scripts]
formurmel = "formurmel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

